Organização do EDA

--- a/EDA_BIPA_full.qmd
+++ b/EDA_BIPA_full.qmd
@@ -540,12 +540,6 @@ growth_metric_plot(cum_year, "Ano","Crescimento anual de usuários BIPA", 'year'
 
 > Reflete a *adoção do serviço* por usuários novos ou recorrentes que antes nunca haviam utilizado aquele produto/serviço específico.
 
-**💡 Quando usar:**
-
--   Quando o foco é entender a expansão da base de usuários daquele serviço.
-
-    Bom para avaliar campanhas de cross-sell ou onboarding.
-
 ### ✅ **Opção 2: Crescimento pelo número total de serviços utilizados no período**
 
 **Mede:** o total de utilizações do serviço (independente do usuário já ter usado antes).
@@ -554,146 +548,10 @@ growth_metric_plot(cum_year, "Ano","Crescimento anual de usuários BIPA", 'year'
 
 > Mede a *intensidade de uso* — pode crescer mesmo que não haja novos usuários, apenas mais uso pelos mesmos.
 
-**💡 Quando usar:**
-
--   o o foco é entender o crescimento do volume operacional.
-
-    Útil para mensurar impacto de melhorias de UX, mudanças de tarifa, sazonalidade etc.
-
-### ✅ **Opção 3: Usar as duas abordagens**
-
-Você não está soando exagerada se usar as duas — elas respondem perguntas diferentes:
-
 | Pergunta | Métrica mais adequada |
 |------------------------------------|------------------------------------|
 | Estamos conquistando mais usuários para esse serviço? | **Usuários novos no serviço** |
 | O serviço está sendo mais utilizado (independente de quem usa)? | **Quantidade total de uso** |
-
-### ✨ Recomendação prática
-
-1.  
-
-2.  **Mostre as duas métricas (em gráficos separados ou um painel):**\
-    → Isso mostra sua maturidade como analista, pois você está abordando o crescimento de forma multifacetada.
-
-3.  
-
-4.  **Na apresentação, deixe claro que você pensou nas duas óticas:**\
-    → Ex: “Como o crescimento pode se manifestar tanto na adesão de novos usuários quanto no aumento do uso pelos já existentes, analisei ambas as dimensões.”
-
-5.  
-
-6.  **Escolha uma principal para justificar (se pedirem):**\
-    → Pode ser a de novos usuários se o foco estiver em **expansão da base**, ou total de uso se o foco estiver em **crescimento do volume transacional**.
-
-### ✅ **Objetivo final**
-
-Criar uma visão macro da **adoção dos serviços da BIPA ao longo do tempo**, separando por:
-
--   
-
--   Produtos (ex: cartão, cotações)
-
--   
-
--   Transações (ex: Pix, compras, pedidos)
-
--   
-
-### ✅ **Etapas sugeridas**
-
-1.  
-
-2.  **Criar uma tabela unificada com o 1º uso de cada serviço por `user_id`**\
-    Exemplo:
-
-    ```         
-    sql
-    ```
-
-    CopiarEditar
-
-    `SELECT user_id, 'Cartão' AS servico, MIN(created_at) AS first_use FROM card_holder GROUP BY user_id`
-
-3.  
-
-4.  **Repetir isso para cada serviço**:
-
-    -   
-
-    -   Quotes → 'Cotação'
-
-    -   
-
-    -   Pix_transactions → 'Pix'
-
-    -   
-
-    -   Card_purchases → 'Compra com cartão'
-
-    -   
-
-    -   Orders → 'Pedido'
-
-    -   
-
-5.  
-
-6.  **Fazer um `UNION ALL` entre todos os serviços**
-
-7.  
-
-8.  **Transformar a data em mês (`strftime('%Y-%m', ...)`)**
-
-9.  
-
-10. **Contar número de usuários únicos por serviço e por mês**
-
-11. 
-
-12. **Criar colunas auxiliares: acumulado e taxa de crescimento por serviço**
-
-13. 
-
-14. **Visualizar num gráfico com `facet_wrap(~servico)` ou cores por categoria**
-
-15. 
-
-### 💡 Exemplo de estrutura unificada (passo 3 e 4)
-
-```         
-sql
-```
-
-CopiarEditar
-
-`WITH unificado AS (   SELECT user_id, 'Cartão' AS servico, MIN(datetime(created_at, 'unixepoch')) AS dt   FROM card_holder GROUP BY user_id    UNION ALL    SELECT user_id, 'Cotação', MIN(datetime(created_at, 'unixepoch'))   FROM quotes GROUP BY user_id    UNION ALL    SELECT user_id, 'Pix', MIN(datetime(created_at, 'unixepoch'))   FROM pix_transactions GROUP BY user_id    UNION ALL    SELECT user_id, 'Compra com cartão', MIN(datetime(created_at, 'unixepoch'))   FROM card_purchases GROUP BY user_id    UNION ALL    SELECT user_id, 'Pedido', MIN(datetime(created_at, 'unixepoch'))   FROM orders GROUP BY user_id ), servico_por_mes AS (   SELECT     servico,     strftime('%Y-%m', dt) AS month,     COUNT(DISTINCT user_id) AS novos_usuarios   FROM unificado   GROUP BY servico, month )`
-
-### 📊 Visualização sugerida
-
-Depois de calcular a taxa de crescimento em cima de `servico_por_mes`, você pode usar no R:
-
-```         
-r
-```
-
-CopiarEditar
-
-`ggplot(df, aes(x = month, y = growth_rate, color = categoria)) +   geom_line() +   facet_wrap(~ servico) +   theme_minimal()`
-
-### ✅ Vantagens dessa abordagem final:
-
--   Resume **a adoção de todos os serviços** num único panorama;
-
--   Mostra quais serviços puxam o crescimento da empresa;
-
--   Ajuda a justificar decisões estratégicas como: **em que produtos investir mais**.
-
-### Pontos fortes e fracos da métrica
-
--   **Ponto forte:** conecta diretamente ao comportamento do usuário e ao engajamento com o ecossistema da Bipa.
-
--   **Ponto fraco:** se não estiver muito bem definido, pode ser interpretado como “menos estratégico” que métricas financeiras como GTV ou receita.
 
 ### Growth Rate de Engajamento Multi-Produto
 
@@ -724,160 +582,4 @@ Onde:
 
 -   Gráfico de barras mostrando quais combinações de produtos são masi comuns (cartão + Pix, Pix + ativos, etc)
 
-## **Resultados**
-
-### **1. Métrica Principal – Growth Rate Geral**
-
--   
-
--   
-
-    **Definição rápida** (1 frase, já apresentada antes).
-
--   
-
--   
-
-    **Tabela ou gráfico** mostrando a taxa de crescimento mensal e/ou anual da base engajada.
-
--   
-
--   
-
-    **1–2 frases de interpretação**: “O crescimento médio mensal foi de X%, com destaque para os meses Y e Z, onde houve picos devido a …”.
-
--   
-
-### **2. Segmentação por Produto e Operação**
-
--   
-
--   
-
-    Breve introdução: “Para entender a contribuição de cada produto para a métrica geral, a Growth Rate foi calculada individualmente por tipo de serviço”.
-
--   
-
--   
-
-    **Gráfico comparativo** (ex.: linhas ou barras lado a lado) com a taxa de crescimento mensal de cada produto.
-
--   
-
--   
-
-    **Insights-chave** (bullet points, no máximo 3):
-
-    -   
-
-    -   
-
-        “PIX apresentou crescimento consistente, sendo responsável por X% do crescimento total em Mês Y”.
-
-    -   
-
-    -   
-
-        “Cartão teve queda em Mês Z, impactando negativamente o crescimento geral”.
-
-    -   
-
-    -   
-
-        “Orders cresceram após a campanha ABC”.
-
-    -   
-
--   
-
-### **3. Análise Individual de Engajamento por Serviço**
-
--   
-
--   
-
-    Introdução curta: “Além da taxa de crescimento, avaliou-se o engajamento de cada produto de forma isolada para identificar padrões específicos de uso”.
-
--   
-
--   
-
-    **Mini-seção por produto** (máximo 3 linhas cada + 1 gráfico pequeno):
-
-    -   
-
-    -   
-
-        *PIX*: evolução de usuários ativos e transações.
-
-    -   
-
-    -   
-
-        *Cartão*: evolução de criação de cartões e compras realizadas.
-
-    -   
-
-    -   
-
-        *Orders/Quotes*: evolução de usuários e volume de ativos negociados.
-
-    -   
-
-    -   
-
-        *Transferências internas*: frequência e base engajada.
-
-    -   
-
--   
-
--   
-
-    **Resumo geral** (1 parágrafo): “Os produtos que mais contribuíram para o engajamento total foram…”.
-
--   
-
-### **4. Contribuição Relativa para o Crescimento Total**
-
--   
-
--   
-
-    **Gráfico de contribuição** (ex.: gráfico de área empilhada ou waterfall mostrando % do crescimento atribuída a cada produto).
-
--   
-
--   
-
-    Interpretação final (1 parágrafo) ligando com o objetivo do desafio:
-
-    -   
-
-    -   
-
-        “Essa análise mostra que o crescimento da base engajada é puxado principalmente por…, o que indica oportunidades de…”.
-
-    -   
-
--   
-
-💡 **Estratégia**:
-
--   
-
--   
-
-    O avaliador bate o olho e vê que **você tem uma métrica principal clara**.
-
--   
-
--   
-
-    As análises adicionais não parecem “outras métricas”, mas sim **formas diferentes de dissecar a mesma métrica**.
-
--   
-
--   
-
-    Você aproveita todo o trabalho que já fez ontem, mas mantém a narrativa curta e direta.
+O Growth Rate é útil para medir tendência, mas ele precisa ser interpretado junto ao volume absoluto de usuários. Em bases pequenas, variações percentuais podem parecer desproporcionais, então recomendo sempre acompanhar as duas métricas lado a lado
